changed logo and colors

--- a/index.html
+++ b/index.html
@@ -110,21 +110,21 @@
               <div class="row header-nav-col-row">
                 <div class="col-sm-auto align-self-center">
                   <a class="menuzord-brand site-brand" href="index-mp-layout1.html">
-                    <img class="logo-default logo-1x" src="images/logo-wide.png" alt="Logo">
-                    <img class="logo-default logo-2x retina" src="images/logo-wide@2x.png" alt="Logo">
+                    <!-- <img class="logo-default logo-1x" src="images/logo-wide.png" alt="Logo"> -->
+                    <img class="logo-default logo-2x retina" style="width: 200px;" data-translate="logo" src="images/logo-rus.png" alt="Logo">
                   </a>
                 </div>
                 <div class="col-sm-auto ms-auto pr-0 align-self-center">
                   <nav id="top-primary-nav" class="menuzord theme-color1" data-effect="slide" data-animation="none"
                     data-align="right">
                     <ul class="menuzord-menu onepage-nav">
-                      <li class="active"><a data-translate="home_t" href="#home"></a></li>
-                      <li><a data-translate="about_us_t" href="#about"></a></li>
-                      <li><a data-translate="courses_t" href="#courses"></a></li>
-                      <li><a data-translate="teachers_t" href="#teachers"></a></li>
-                      <li><a data-translate="gallery_t" href="#gallery"></a></li>
+                      <li class="current active"><a data-translate="home_t" href="/index.html"></a></li>
+                      <li><a data-translate="about_us_t" href=""></a></li>
+                      <li><a data-translate="courses_t" href=""></a></li>
+                      <li><a data-translate="teachers_t" href=""></a></li>
+                      <li><a data-translate="gallery_t" href=""></a></li>
                       <!-- <li><a href="#blog">Blog</a></li> -->
-                      <li><a data-translate="contact_t" href="#contact"></a></li>
+                      <li><a data-translate="contact_t" href=""></a></li>
                     </ul>
                   </nav>
                 </div>
@@ -243,9 +243,9 @@
                         data-xy="x:l,l,l,c;xo:59px,50px,55px,0;yo:364px,321px,291px,245px;"
                         data-text="w:normal;s:36,32,28,24;l:25,21,25,30;fw:600;a:left,left,left,center;"
                         data-padding="t:15,15,11,7;r:20,20,15,15;b:15,15,11,7;l:20,20,15,15;"
-                        data-border="bos:solid;boc:#f2184f;bow:0,0px,0,6px;" data-frame_1="st:600;sp:1000;sR:500;"
+                        data-border="bos:solid;boc:#FEF8F3;bow:0,0px,0,6px;" data-frame_1="st:600;sp:1000;sR:500;"
                         data-frame_999="o:0;st:w;sR:7500;"
-                        style="z-index:10;background-color:#202c45;text-transform:uppercase;"
+                        style="z-index:10;background-color:#74543B;text-transform:uppercase;"
                         data-translate="slider_1_sub">
                       </rs-layer>
                       <!--
@@ -285,9 +285,9 @@
                         data-xy="x:c;yo:364px,323px,291px,245px;"
                         data-text="w:normal;s:36,32,28,24;l:25,21,25,30;fw:600;a:left,left,left,center;"
                         data-padding="t:15,15,11,7;r:30,20,15,15;b:15,15,11,7;l:30,20,15,15;"
-                        data-border="bos:solid;boc:#f2184f;bow:0,6px,0,6px;bor:50px,50px,50px,50px;"
+                        data-border="bos:solid;boc:#FEF8F3;bow:0,6px,0,6px;bor:50px,50px,50px,50px;"
                         data-frame_1="st:600;sp:1000;sR:500;" data-frame_999="o:0;st:w;sR:7500;"
-                        style="z-index:10;background-color:#131b2c;text-transform:uppercase;"
+                        style="z-index:10;background-color:#74543B;text-transform:uppercase;"
                         data-translate="slider_2_sub">
                       </rs-layer>
                       <!--
@@ -328,9 +328,9 @@
                         data-xy="x:r,r,r,c;xo:55px,50px,55px,0;yo:364px,321px,291px,245px;"
                         data-text="w:normal;s:36,32,28,24;l:25,21,25,30;fw:600;a:left,left,left,center;"
                         data-padding="t:15,15,11,7;r:20,20,15,15;b:15,15,11,7;l:20,20,15,15;"
-                        data-border="bos:solid;boc:#f2184f;bow:0,6px,0,0px;" data-frame_1="st:600;sp:1000;sR:500;"
+                        data-border="bos:solid;boc:#FEF8F3;bow:0,6px,0,0px;" data-frame_1="st:600;sp:1000;sR:500;"
                         data-frame_999="o:0;st:w;sR:7500;"
-                        style="z-index:10;background-color:#202c45;text-transform:uppercase;"
+                        style="z-index:10;background-color:#74543B;text-transform:uppercase;"
                         data-translate="slider_3_sub">
                       </rs-layer>
                       <!--
@@ -391,12 +391,12 @@
                 <div class="box-hover-effect tm-sc-video-popup tm-sc-video-popup-button-over-image">
                   <div class="effect-wrapper">
                     <div class="thumb">
-                      <img class="w-100" src="images/about/5.jpg" alt="">
+                      <img class="w-100" src="images/video-thumb.png" alt="">
                     </div>
                     <div class="animated-css-play-button"><span class="play-icon"><i class="fa fa-play"></i></span>
                     </div>
                     <a class="hover-link" data-lightbox-gallery="youtube-video"
-                      href="https://www.youtube.com/watch?v=xcJtL7QggTI" title=""></a>
+                      href="https://youtu.be/CvxRaFcRRJk" title=""></a>
                   </div>
                 </div>
               </div>
@@ -1229,13 +1229,16 @@
                 <div class="thumb">
                   <img alt="Logo" width="80%" src="images/qalam-white.png">
                 </div>
-                <div class="description">С Образовательным центром «Калам» вы достигните новых высот в получении новых знаний</div>
+                <div class="description">С Образовательным центром «Калам» вы достигните новых высот в получении новых
+                  знаний</div>
               </div>
               <ul class="styled-icons icon-dark icon-theme-colored1 icon-rounded clearfix">
-                <li><a class="social-link" href="https://www.facebook.com/qalam.tj/"><i class="fab fa-facebook"></i></a></li>
+                <li><a class="social-link" href="https://www.facebook.com/qalam.tj/"><i class="fab fa-facebook"></i></a>
+                </li>
                 <!-- <li><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
                 <li><a class="social-link" href="#"><i class="fab fa-youtube"></i></a></li> -->
-                <li><a class="social-link" href="https://www.instagram.com/qalam.tj/"><i class="fab fa-instagram"></i></a></li>
+                <li><a class="social-link" href="https://www.instagram.com/qalam.tj/"><i
+                      class="fab fa-instagram"></i></a></li>
               </ul>
             </div>
             <!-- <div class="col-md-6 col-lg-6 col-xl-3">
@@ -1315,7 +1318,7 @@
               </div>
               <div class="col-sm-6">
                 <div class="footer-paragraph text-right">
-                  Qalam
+                  Designed and Developed by: Shohjahon Hakimjonov
                 </div>
               </div>
             </div>
