--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="col-sm-auto align-self-center">
                   <a class="menuzord-brand site-brand" href="index-mp-layout1.html">
                     <!-- <img class="logo-default logo-1x" src="images/logo-wide.png" alt="Logo"> -->
-                    <img class="logo-default logo-2x retina" style="width: 200px;" data-translate="logo" src="images/logo-rus.png" alt="Logo">
+                    <img class="logo-default" style="width: 200px;" data-translate="logo" src="images/logo-rus.png" alt="Logo">
                   </a>
                 </div>
                 <div class="col-sm-auto ms-auto pr-0 align-self-center">
